# boulderX

./: Cargo.toml  LICENSE  README.md
.copr/: Makefile
packaging/: PKGBUILD  boulder-relay.desktop  boulder-relay.spec  boulderX.desktop  boulderX.spec  build-rpm.sh  io.github.sisyphusaeolides.boulderx.desktop  io.github.sisyphusaeolides.boulderx.metainfo.xml  org.Sisyphus.BoulderRelay.metainfo.xml  org.Sisyphus.BoulderX.metainfo.xml  rawhide-relay.spec  setup-copr.sh
src/: app.rs  channels.rs  config.rs  main.rs  notify.rs  theme.rs
src/discord/: mod.rs
src/irc/: commands.rs  connection.rs  mod.rs
src/matrix/: client.rs  mod.rs  rooms.rs  sync.rs
src/ui/: chat_view.rs  composer.rs  dialogs.rs  mod.rs  sidebar.rs
