[package]
name = "boulderX"
version = "0.6.2"
edition = "2021"
authors = ["SisyphusAeolides"]
description = "A fast GTK4 + libadwaita IRC, Matrix, and Discord bot client written in Rust"
homepage = "https://github.com/SisyphusAeolides/boulderX"
repository = "https://github.com/SisyphusAeolides/boulderX"
license = "GPL-2.0-or-later"
readme = "README.md"
keywords = ["irc", "matrix", "discord", "chat", "gtk4"]
categories = ["network-programming", "gui"]

[dependencies]
relm4 = { version = "0.9", default-features = false, features = ["macros"] }
gtk = { package = "gtk4", version = "0.9", features = ["v4_14"] }
adw = { package = "libadwaita", version = "0.7", features = ["v1_4"] }
tokio = { version = "1", features = ["full"] }
irc = "0.15"
futures = "0.3"
base64 = "0.21.7"
serde = { version = "1", features = ["derive"] }
toml = "1.1"
matrix-sdk = { version = "0.10", features = ["e2e-encryption", "sqlite"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
serenity = { version = "0.12.5", default-features = false, features = ["client", "gateway", "model", "rustls_backend"] }

[patch.crates-io]
serenity = { path = "vendor/serenity-0.12.5" }

[profile.release]
opt-level = 3
lto = "thin"
strip = true
codegen-units = 1
